# fiberwise-common

./: .gitignore  README.md  README_TESTING.md  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
fiberwise_common/: __init__.py  config.py  constants.py  schemas.py  utils.py
fiberwise_common/activation/: __init__.py  activation_processor.py
fiberwise_common/database/: __init__.py  base.py  duckdb.py  factory.py  manager.py  migrations.py  postgres.py  providers.py  query_adapter.py  security.py  security_config.py  sql_loader.py  sqlite.py
fiberwise_common/database/sql/: __init__.py  init.sql
fiberwise_common/entities/: __init__.py  activations.py  agent.py  agent_keys.py  agents.py  api_keys.py  app.py  app_responses.py  app_reviews.py  app_versions.py  config.py  fiber_agent.py  functions.py  invitations.py  isolation.py  llm_providers.py  oauth.py  organizations.py  pipeline.py  pipeline_events.py  pipelines.py  service_providers.py  unified_manifest.py  user.py  utils.py  workflows.py
fiberwise_common/functions/: __init__.py  function_processor.py
fiberwise_common/pipeline_steps/: __init__.py  base.py
fiberwise_common/services/: __init__.py  account_service.py  agent_key_service.py  agent_service.py  agent_storage_provider.py  agent_version_service.py  api_keys_service.py  app_agent_service.py  app_migration_service.py  app_service.py  app_upload_service.py  app_version_service.py  base_service.py  cli_utils.py  config.py  connection_manager.py  email_service.py  execution_key_service.py  fiber_app_manager.py  fiberwise_config.py  function_service.py  install_service.py  llm_provider_service.py  llm_service_factory.py  local_service.py  model_operations_service.py  oauth_injection_service.py  oauth_provider_handlers.py  oauth_service.py  organization_service.py  pipeline_service.py  provider_service.py  relation_query_service.py  scoped_storage_provider.py  security.py  service_factory.py  service_registry.py  storage_provider.py  unified_executions_service.py  update_service.py  (+5 more)
fiberwise_common/utils/: __init__.py  agent_templates.py  agent_utils.py  code_validators.py  file_utils.py  language_utils.py  llm_response_utils.py  schema_utils.py
fiberwise_common/worker/: __init__.py  aws_sqs_worker.py  base.py  external_worker.py  factory.py  local.py
fiberwise_common/worker/docs/: CLOUDFLARE_LLM_PROVIDER.md  CLOUDFLARE_WORKER_README.md  CLOUD_WORKER_README.md  HUGGINGFACE_LLM_PROVIDER.md  OPENROUTER_LLM_PROVIDER.md  WORKER_EXAMPLES.md
tests/: __init__.py  conftest.py
tests/integration/: test_database_service_integration.py  test_full_stack_integration.py
tests/unit/: test_agent_utils.py  test_agent_utils_comprehensive.py  test_base_service.py  test_code_validators.py  test_code_validators_comprehensive.py  test_config.py  test_database_base.py  test_database_providers.py  test_database_providers_enhanced.py  test_file_utils.py  test_file_utils_basic.py  test_llm_response_utils.py  test_sqlite_provider.py
